--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -209,6 +209,7 @@
                                 <Image Source="{Binding CurrentImage}" Stretch="None"/>
 
                                 <ItemsControl ItemsSource="{Binding GridOverlayShapes}" IsHitTestVisible="False">
+
                                     <ItemsControl.ItemsPanel>
                                         <ItemsPanelTemplate>
                                             <Canvas Background="{x:Null}"/>
@@ -221,13 +222,55 @@
                                             <Setter Property="Canvas.Top" Value="{Binding Top}"/>
                                         </Style>
                                     </ItemsControl.ItemContainerStyle>
+
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
-                                            <Ellipse Width="{Binding Diameter}" Height="{Binding Diameter}" 
-                                                 Stroke="{Binding StrokeBrush}" 
-                                                 StrokeThickness="{Binding StrokeThickness}" 
-                                                 Fill="Transparent"
-                                                 ToolTip="{Binding TooltipInfo}"/>
+                                            <Grid>
+                                                <Grid x:Name="BallGrid">
+                                                    <Ellipse Width="{Binding Diameter}" Height="{Binding Diameter}"
+                             Stroke="{Binding StrokeBrush}" 
+                             StrokeThickness="{Binding StrokeThickness}" 
+                             Fill="Transparent"
+                             ToolTip="{Binding TooltipInfo}"/>
+
+                                                    <Polygon Points="{Binding ContourPoints}"
+                             Stroke="{Binding StrokeBrush}"
+                             StrokeThickness="1.5"
+                             Fill="#2000FF00" 
+                             IsHitTestVisible="False">
+                                                        <Polygon.Style>
+                                                            <Style TargetType="Polygon">
+                                                                <Style.Triggers>
+                                                                    <DataTrigger Binding="{Binding IsFoundByBlob}" Value="False">
+                                                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                                                    </DataTrigger>
+                                                                </Style.Triggers>
+                                                            </Style>
+                                                        </Polygon.Style>
+                                                    </Polygon>
+                                                </Grid>
+
+                                                <Canvas x:Name="LineCanvas" Visibility="Collapsed">
+                                                    <Rectangle Width="{Binding Width}" 
+                                                       Height="{Binding Height}"
+                                                       RenderTransformOrigin="0.5, 0.5"
+                                                       Stroke="{Binding StrokeBrush}" 
+                                                       StrokeThickness="2"
+                                                       Fill="#40FF00FF"
+                                                       ToolTip="{Binding TooltipInfo}">
+                                                        <Rectangle.RenderTransform>
+                                                            <RotateTransform Angle="{Binding AngleDegree}"/>
+                                                        </Rectangle.RenderTransform>
+                                                    </Rectangle>
+                                                </Canvas>
+                                            </Grid>
+
+                                            <DataTemplate.Triggers>
+                                                <DataTrigger Binding="{Binding IsLine}" Value="True">
+                                                    <Setter TargetName="BallGrid" Property="Visibility" Value="Collapsed"/>
+                                                    <Setter TargetName="LineCanvas" Property="Visibility" Value="Visible"/>
+                                                </DataTrigger>
+                                            </DataTemplate.Triggers>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
@@ -373,6 +416,12 @@
                                             <Slider Minimum="0" Maximum="255" Value="{Binding FixedThresholdVal}" Margin="0,5"/>
                                             <TextBlock Text="Kéo về 0 = Đen, 255 = Trắng" FontSize="10" FontStyle="Italic" Foreground="Gray"/>
                                         </StackPanel>
+
+                                        <Separator Margin="0,10"/>
+                                        
+                                        <TextBlock Text="{Binding VoidThreshold, StringFormat='Void Sensitivity: {0:F1}%'}" FontWeight="SemiBold"/>
+                                        <Slider Minimum="0" Maximum="100" Value="{Binding VoidThreshold}" TickFrequency="0.1" IsSnapToTickEnabled="True" Margin="0,5"/>
+                                        <TextBlock Text="Độ nhạy phát hiện Void (Thấp = Dễ chấp nhận là OK)" FontSize="10" FontStyle="Italic" Foreground="Gray"/>
                                     </StackPanel>
                                 </GroupBox>
 
@@ -490,17 +539,53 @@
                                     </ItemsControl.ItemContainerStyle>
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
-                                            <Ellipse Width="{Binding Diameter}" Height="{Binding Diameter}" 
-                                         Stroke="{Binding StrokeBrush}" 
-                                         StrokeThickness="{Binding StrokeThickness}" 
-                                         Fill="Transparent"
-                                         ToolTip="{Binding TooltipInfo}">
-                                                <Ellipse.InputBindings>
-                                                    <MouseBinding Gesture="RightClick" 
-                                                      Command="{Binding DataContext.RemoveOverlayCommand, RelativeSource={RelativeSource AncestorType=Window}}" 
-                                                      CommandParameter="{Binding}"/>
-                                                </Ellipse.InputBindings>
-                                            </Ellipse>
+                                            <Grid>
+                                                <Grid x:Name="BallGrid">
+                                                    <Ellipse Width="{Binding Diameter}" Height="{Binding Diameter}"
+                         Stroke="{Binding StrokeBrush}" 
+                         StrokeThickness="{Binding StrokeThickness}" 
+                         Fill="Transparent"
+                         ToolTip="{Binding TooltipInfo}">
+                                                        <Ellipse.InputBindings>
+                                                            <MouseBinding Gesture="RightClick" 
+                                      Command="{Binding DataContext.RemoveOverlayCommand, RelativeSource={RelativeSource AncestorType=Window}}" 
+                                      CommandParameter="{Binding}"/>
+                                                        </Ellipse.InputBindings>
+                                                    </Ellipse>
+
+                                                    <Polygon Points="{Binding ContourPoints}"
+                         Stroke="{Binding StrokeBrush}"
+                         StrokeThickness="1.5"
+                         Fill="#2000FF00" 
+                         IsHitTestVisible="False">
+                                                        <Polygon.Style>
+                                                            <Style TargetType="Polygon">
+                                                                <Style.Triggers>
+                                                                    <DataTrigger Binding="{Binding IsFoundByBlob}" Value="False">
+                                                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                                                    </DataTrigger>
+                                                                </Style.Triggers>
+                                                            </Style>
+                                                        </Polygon.Style>
+                                                    </Polygon>
+                                                </Grid>
+
+                                                <Canvas x:Name="LineCanvas" Visibility="Collapsed">
+                                                    <Line X1="0" Y1="0" 
+                      X2="{Binding RelativeX2}" 
+                      Y2="{Binding RelativeY2}" 
+                      Stroke="{Binding StrokeBrush}" 
+                      StrokeThickness="3"
+                      ToolTip="{Binding TooltipInfo}"/>
+                                                </Canvas>
+                                            </Grid>
+
+                                            <DataTemplate.Triggers>
+                                                <DataTrigger Binding="{Binding IsLine}" Value="True">
+                                                    <Setter TargetName="BallGrid" Property="Visibility" Value="Collapsed"/>
+                                                    <Setter TargetName="LineCanvas" Property="Visibility" Value="Visible"/>
+                                                </DataTrigger>
+                                            </DataTemplate.Triggers>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
